--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,19 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/postcss": "^4.0.14",
     "@tanstack/react-query": "^5.55.3",
+    "ethers": "^6.13.5",
     "next": "^15.1.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.14",
-    "viem": "2.23.3",
-    "wagmi": "^2.14.11"
+    "viem": "^2.23.3",
+    "wagmi": "^2.14.15"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
     "@types/react": "^19.0.6",
+    "dotenv": "^16.4.7",
     "eslint-config-next": "^15.1.7",
     "typescript": "5.5.4"
   }
